--- a/app/src/main/res/layout/fragment_filter_set.xml
+++ b/app/src/main/res/layout/fragment_filter_set.xml
@@ -129,23 +129,24 @@
             android:textSize="20dp"/>
 
         <LinearLayout
-            android:layout_width="345dp"
+            android:layout_width="340dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="7dp">
             <FrameLayout
-                android:layout_width="345dp"
+                android:layout_width="340dp"
                 android:layout_height="21dp"
                 >
                 <ImageView
-                    android:layout_width="324dp"
+                    android:id="@+id/seekbar_bg"
+                    android:layout_width="319dp"
                     android:layout_height="1dp"
                     android:background="@color/colorPoint"
                     android:layout_gravity="center_vertical|center_horizontal"
                     />
                 <RelativeLayout
-                    android:layout_width="324dp"
+                    android:layout_width="319dp"
                     android:layout_height="1dp"
                     android:layout_gravity="center_vertical|center_horizontal">
                     <ImageView
