--- a/app/src/main/res/layout/fragment_filter_set.xml
+++ b/app/src/main/res/layout/fragment_filter_set.xml
@@ -127,61 +127,6 @@
             android:text="나이"
             android:textColor="#000000"
             android:textSize="20dp"/>
-
-        <LinearLayout
-            android:layout_width="340dp"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="7dp">
-            <FrameLayout
-                android:layout_width="340dp"
-                android:layout_height="21dp"
-                >
-                <ImageView
-                    android:id="@+id/seekbar_bg"
-                    android:layout_width="319dp"
-                    android:layout_height="1dp"
-                    android:background="@color/colorPoint"
-                    android:layout_gravity="center_vertical|center_horizontal"
-                    />
-                <RelativeLayout
-                    android:layout_width="319dp"
-                    android:layout_height="1dp"
-                    android:layout_gravity="center_vertical|center_horizontal">
-                    <ImageView
-                        android:id="@+id/iv_minimum_age_bg_deactivate"
-                        android:layout_width="0dp"
-                        android:layout_height="1dp"
-                        android:background="@color/colorGray"
-                        android:layout_alignParentLeft="true"/>
-                    <ImageView
-                        android:id="@+id/iv_maximum_age_bg_deactivate"
-                        android:layout_width="0dp"
-                        android:layout_height="1dp"
-                        android:background="@color/colorGray"
-                        android:layout_alignParentRight="true"/>
-                </RelativeLayout>
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <ImageView
-                        android:id="@+id/iv_minimum_age"
-                        android:layout_width="21dp"
-                        android:layout_height="21dp"
-                        android:src="@drawable/rectangle"
-                        android:layout_alignParentLeft="true"
-                        />
-                    <ImageView
-                        android:id="@+id/iv_maximum_age"
-                        android:layout_width="21dp"
-                        android:layout_height="21dp"
-                        android:src="@drawable/rectangle"
-                        android:layout_alignParentRight="true"/>
-                </RelativeLayout>
-            </FrameLayout>
-
-        </LinearLayout>
         <RelativeLayout
             android:layout_width="345dp"
             android:layout_height="wrap_content"
@@ -206,6 +151,70 @@
                 android:textStyle="bold"
                 android:layout_alignParentRight="true"/>
         </RelativeLayout>
+        <LinearLayout
+            android:layout_width="340dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="7dp">
+            <FrameLayout
+                android:layout_width="340dp"
+                android:layout_height="42dp"
+                >
+                <ImageView
+                    android:id="@+id/seekbar_bg"
+                    android:layout_width="319dp"
+                    android:layout_height="1dp"
+                    android:background="@color/colorPoint"
+                    android:layout_gravity="center_vertical|center_horizontal"
+                    />
+                <RelativeLayout
+                    android:id="@+id/age_bar_bg"
+                    android:layout_width="319dp"
+                    android:layout_height="1dp"
+                    android:layout_gravity="center_vertical|center_horizontal">
+                    <ImageView
+                        android:id="@+id/iv_minimum_age_bg_deactivate"
+                        android:layout_width="0dp"
+                        android:layout_height="1dp"
+                        android:background="@color/colorGray"
+                        android:layout_alignParentLeft="true"/>
+                    <ImageView
+                        android:id="@+id/iv_maximum_age_bg_deactivate"
+                        android:layout_width="0dp"
+                        android:layout_height="1dp"
+                        android:background="@color/colorGray"
+                        android:layout_alignParentRight="true"/>
+                </RelativeLayout>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+                    <ImageView
+                        android:id="@+id/iv_minimum_age"
+                        android:layout_width="32.5dp"
+                        android:layout_height="42dp"
+                        android:cropToPadding="true"
+                        android:paddingRight="10.5dp"
+                        android:paddingBottom="10.5dp"
+                        android:paddingTop="10.5dp"
+                        android:src="@drawable/rectangle"
+                        android:layout_alignParentLeft="true"
+                        />
+                    <ImageView
+                        android:id="@+id/iv_maximum_age"
+                        android:layout_width="32.5dp"
+                        android:layout_height="42dp"
+                        android:cropToPadding="true"
+                        android:paddingLeft="10.5dp"
+                        android:paddingBottom="10.5dp"
+                        android:paddingTop="10.5dp"
+                        android:src="@drawable/rectangle"
+                        android:layout_alignParentRight="true"/>
+                </RelativeLayout>
+            </FrameLayout>
+
+        </LinearLayout>
+
 
         <RelativeLayout
             android:layout_width="match_parent"
