--- a/app/src/main/res/layout/my_meeting_card_chat.xml
+++ b/app/src/main/res/layout/my_meeting_card_chat.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textSize="12sp"
-            android:text="안녕하세요! 미팅 재밌게 해요!"
+            android:text="매칭이 완료되었습니다. 채팅을 시작해보세요."
             android:gravity="center_vertical"
             android:textColor="#5E5E5E"
             android:layout_marginLeft="7dp"
