--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -35,7 +35,8 @@
                 android:id="@+id/notification_bg"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                >
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
