--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -4,9 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorPrimary">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -69,78 +67,86 @@
                     android:layout_marginRight="18dp"
                     />
             </RelativeLayout-->
-            <com.yamigu.yamigu_app.CustomLayout.ProfileCard
-                android:id="@+id/profile_card"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                app:age="24"
-                app:company="연세대학교"
-                app:department="전기전자공학부"
-                app:nickname="김찬열"></com.yamigu.yamigu_app.CustomLayout.ProfileCard>
-
-            <com.yamigu.yamigu_app.CustomLayout.InviteFriends
-                android:id="@+id/invite_friend"
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="33dp"
-                app:code="q7tik3">
-            </com.yamigu.yamigu_app.CustomLayout.InviteFriends>
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="33dp"
-                android:layout_marginBottom="33dp">
-                <RelativeLayout
+                android:layout_height="match_parent">
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <LinearLayout
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+                    <com.yamigu.yamigu_app.CustomLayout.ProfileCard
+                        android:id="@+id/profile_card"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:orientation="vertical">
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="19dp"
-                            android:text="야미구와 1:1 대화하기"
-                            android:textSize="14dp"
-                            android:textColor="@color/colorBlack"
-                            android:fontFamily="@font/nanumgothic_font_family"
-                            />
-                        <ImageView
-                            android:layout_width="26dp"
-                            android:layout_height="4dp"
-                            android:background="@color/colorPoint"
-                            android:layout_marginLeft="19dp"/>
-                        <LinearLayout
-                            android:layout_width="359dp"
-                            android:layout_height="90.93dp"
-                            android:layout_gravity="center_horizontal"
-                            android:layout_marginTop="4dp"
-                            android:background="@drawable/profile_card_bg">
-                            <ImageView
+                        android:layout_gravity="center_horizontal"
+                        app:age="24"
+                        app:company="연세대학교"
+                        app:department="전기전자공학부"
+                        app:nickname="김찬열"></com.yamigu.yamigu_app.CustomLayout.ProfileCard>
+
+                    <com.yamigu.yamigu_app.CustomLayout.InviteFriends
+                        android:id="@+id/invite_friend"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="33dp"
+                        app:code="q7tik3">
+                    </com.yamigu.yamigu_app.CustomLayout.InviteFriends>
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="33dp"
+                        android:layout_marginBottom="33dp">
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent">
+                            <LinearLayout
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:background="@drawable/text_chat_yamigu_desc"
-                                android:layout_marginTop="10dp"
-                                android:layout_marginLeft="10dp"/>
-                        </LinearLayout>
-                    </LinearLayout>
-                </RelativeLayout>
+                                android:layout_centerHorizontal="true"
+                                android:orientation="vertical">
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginLeft="19dp"
+                                    android:text="야미구와 1:1 대화하기"
+                                    android:textSize="14dp"
+                                    android:textColor="@color/colorBlack"
+                                    android:fontFamily="@font/nanumgothic_font_family"
+                                    />
+                                <ImageView
+                                    android:layout_width="26dp"
+                                    android:layout_height="4dp"
+                                    android:background="@color/colorPoint"
+                                    android:layout_marginLeft="19dp"/>
+                                <LinearLayout
+                                    android:layout_width="359dp"
+                                    android:layout_height="90.93dp"
+                                    android:layout_gravity="center_horizontal"
+                                    android:layout_marginTop="4dp"
+                                    android:background="@drawable/profile_card_bg">
+                                    <ImageView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:background="@drawable/text_chat_yamigu_desc"
+                                        android:layout_marginTop="10dp"
+                                        android:layout_marginLeft="10dp"/>
+                                </LinearLayout>
+                            </LinearLayout>
+                        </RelativeLayout>
 
-                <ImageButton
-                    android:id="@+id/btn_kakao_chat"
-                    android:layout_width="315dp"
-                    android:layout_height="44.33dp"
-                    android:background="@drawable/ic_filter_state_kakao"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="96dp"
-                    android:src="@drawable/btn_kakao_chat_text"
-                    >
-                </ImageButton>
-            </FrameLayout>
+                        <ImageButton
+                            android:id="@+id/btn_kakao_chat"
+                            android:layout_width="315dp"
+                            android:layout_height="44.33dp"
+                            android:background="@drawable/ic_filter_state_kakao"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginTop="96dp"
+                            android:src="@drawable/btn_kakao_chat_text"
+                            >
+                        </ImageButton>
+                    </FrameLayout>
+                </LinearLayout>
+            </ScrollView>
         </LinearLayout>
-    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
